fix: align release inspection with approved gate